Completed page layout using grid as well as the sidebar for the dashboard

--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://css.serp.co/css-reset/normalize.css/">
 </head>
 <body>
-    
+    <div class="header">
+    </div>
+    <div class="sidebar">
+        <div class="dashboard-logo">
+            <img src="./assets/icons/diamond_48dp_E3E3E3_FILL1_wght200_GRAD0_opsz48.svg" alt="Logo">
+            Dashboard</div>
+        <div>
+            <img src="./assets/icons/home_app_logo_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Home">
+            Home</div>
+        <div>
+            <img src="./assets/icons/account_circle_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Profile">
+            Profile</div>
+        <div>
+            <img src="./assets/icons/chat_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Messages">
+            Messages</div>
+        <div>
+            <img src="./assets/icons/schedule_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="History">
+            History</div>
+        <div>
+            <img src="./assets/icons/assignment_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Tasks">
+            Tasks</div>
+        <div>
+            <img src="./assets/icons/crowdsource_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Communities">
+            Communities</div>
+        <div class="settings">
+            <img src="./assets/icons/settings_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Settings">
+            Settings</div>
+        <div>
+            <img src="./assets/icons/live_help_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Question">
+            Support</div>
+        <div>
+            <img src="./assets/icons/encrypted_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Privacy">
+            Privacy</div>
+    </div>
+    <div class="content-area"></div>
 </body>
 </html>
