--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 <body>
     <div class="header">
+        <div class="search-bar">
+            <img src="./assets/icons/search_36dp_000000_FILL1_wght400_GRAD0_opsz40.svg" alt="Search">
+            <input type="text">
+        </div>
+        <div class="account-greeting">
+            <img src="./assets/img/profile_pic.png" alt="Header Profile Pic">
+            <div>
+                <p>Hi, there</p>
+                <h1>Abdirazak Farah (@butterdabread)</h1>
+            </div>
+        </div>
+        <div class="account-info"></div>
+        <div class="action-buttons"></div>
     </div>
     <div class="sidebar">
         <div class="dashboard-logo">
-            <img src="./assets/icons/diamond_48dp_E3E3E3_FILL1_wght200_GRAD0_opsz48.svg" alt="Logo">
+            <img id="dash-logo-img" src="./assets/icons/diamond_48dp_E3E3E3_FILL1_wght200_GRAD0_opsz48.svg" alt="Logo">
             Dashboard</div>
         <div>
             <img src="./assets/icons/home_app_logo_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Home">
