Completed the account info section in the header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
                 <h1>Abdirazak Farah (@butterdabread)</h1>
             </div>
         </div>
-        <div class="account-info"></div>
-        <div class="action-buttons"></div>
+        <div class="account-info">
+            <img src="./assets/icons/notifications_active_27dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Alerts">
+            <img class="account-info-pic" src="./assets/img/profile_pic.png" alt="Header Sub-Profile Pic">
+            <h3>Abdirazak Farah</h3>
+        </div>
+        <div class="action-buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
     </div>
     <div class="sidebar">
         <div class="dashboard-logo">
