Fixed box shadow for the bottom of the header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="account-greeting">
             <img src="./assets/img/profile_pic.png" alt="Header Profile Pic">
             <div>
-                <p>Hi, there</p>
+                <p>Hi, there,</p>
                 <h1>Abdirazak Farah (@butterdabread)</h1>
             </div>
         </div>
@@ -63,6 +63,8 @@
             <img src="./assets/icons/encrypted_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Privacy">
             Privacy</div>
     </div>
-    <div class="content-area"></div>
+    <div class="content-area">
+        
+    </div>
 </body>
 </html>
