Fixed spacing in the sidebar as well as add a label to the search icon

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="header">
         <div class="search-bar">
-            <img src="./assets/icons/search_36dp_000000_FILL1_wght400_GRAD0_opsz40.svg" alt="Search">
-            <input type="text">
+            <label for="search">
+                <img src="./assets/icons/search_36dp_000000_FILL1_wght400_GRAD0_opsz40.svg" alt="Search">
+            </label>
+            <input type="text" id="search">
         </div>
         <div class="account-greeting">
             <img src="./assets/img/profile_pic.png" alt="Header Profile Pic">
@@ -34,37 +36,47 @@
     <div class="sidebar">
         <div class="dashboard-logo">
             <img id="dash-logo-img" src="./assets/icons/diamond_48dp_E3E3E3_FILL1_wght200_GRAD0_opsz48.svg" alt="Logo">
-            Dashboard</div>
+            <a href="index.html">Dashboard</a>
+        </div>
         <div>
             <img src="./assets/icons/home_app_logo_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Home">
-            Home</div>
+            Home
+        </div>
         <div>
             <img src="./assets/icons/account_circle_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Profile">
-            Profile</div>
+            Profile
+        </div>
         <div>
             <img src="./assets/icons/chat_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Messages">
-            Messages</div>
+            Messages
+        </div>
         <div>
             <img src="./assets/icons/schedule_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="History">
-            History</div>
+            History
+        </div>
         <div>
             <img src="./assets/icons/assignment_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Tasks">
-            Tasks</div>
+            Tasks
+        </div>
         <div>
             <img src="./assets/icons/crowdsource_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Communities">
-            Communities</div>
+            Communities
+        </div>
         <div class="settings">
             <img src="./assets/icons/settings_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Settings">
-            Settings</div>
+            Settings
+        </div>
         <div>
             <img src="./assets/icons/live_help_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Question">
-            Support</div>
+            Support
+        </div>
         <div>
             <img src="./assets/icons/encrypted_24dp_E3E3E3_FILL1_wght200_GRAD0_opsz24.svg" alt="Privacy">
-            Privacy</div>
+            Privacy
+        </div>
     </div>
     <div class="content-area">
-        
+
     </div>
 </body>
 </html>
