Completed project content-area layout and card styling

--- a/index.html
+++ b/index.html
@@ -75,8 +75,22 @@
             Privacy
         </div>
     </div>
-    <div class="content-area">
-
+    <div class="project">
+        <div class="content-area">
+            <h2>Your Projects</h2>
+            <h2 class="content-header-2">Announcements</h2>
+            <div class="card-1 card">
+                <h4>Super Cool Project</h4>
+                <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                    erat, id facilisis felis accumsan nec.
+                </p>
+            </div>
+            <div class="card-2 card"></div>
+            <div class="card-3 card"></div>
+            <div class="card-4 card"></div>
+            <div class="card-5 card"></div>
+            <div class="card-6 card"></div>
+        </div>
     </div>
 </body>
 </html>
