--- a/index.html
+++ b/index.html
@@ -80,10 +80,17 @@
             <h2>Your Projects</h2>
             <h2 class="content-header-2">Announcements</h2>
             <div class="card-1 card">
-                <h4>Super Cool Project</h4>
-                <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                    erat, id facilisis felis accumsan nec.
-                </p>
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
             </div>
             <div class="card-2 card"></div>
             <div class="card-3 card"></div>
