Filled out content for all the cards

--- a/index.html
+++ b/index.html
@@ -92,11 +92,71 @@
                     </div>
                 </div>
             </div>
-            <div class="card-2 card"></div>
-            <div class="card-3 card"></div>
-            <div class="card-4 card"></div>
-            <div class="card-5 card"></div>
-            <div class="card-6 card"></div>
+            <div class="card-2 card">
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
+            </div>
+            <div class="card-3 card">
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
+            </div>
+            <div class="card-4 card">
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
+            </div>
+            <div class="card-5 card">
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
+            </div>
+            <div class="card-6 card">
+                <div>
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
+                        erat, id facilisis felis accumsan nec.
+                    </p>
+                    <div id="card-icons">
+                        <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
+                        <img src="./assets/icons/add_box_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Watchlist">
+                        <img src="./assets/icons/share_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Share">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
