--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
             </div>
             <div class="card-2 card">
                 <div>
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                        erat, id facilisis felis accumsan nec.
+                    <h3>Impossible App</h3>
+                    <p>
+                        In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, placerate velit
+                        sagittis id.
                     </p>
                     <div id="card-icons">
                         <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
@@ -107,9 +108,10 @@
             </div>
             <div class="card-3 card">
                 <div>
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                        erat, id facilisis felis accumsan nec.
+                    <h3>Ad Blocker</h3>
+                    <p>
+                        Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit
+                        felis. Aliquam sed malesuada eros.
                     </p>
                     <div id="card-icons">
                         <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
@@ -120,9 +122,10 @@
             </div>
             <div class="card-4 card">
                 <div>
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                        erat, id facilisis felis accumsan nec.
+                    <h3>Less Cool Project</h3>
+                    <p>
+                        Nullam condimentum ipsum ut lectus vehicula consectetur. quisque sed dolor tincidunt, consectetur
+                        sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pelientesque lacus.
                     </p>
                     <div id="card-icons">
                         <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
@@ -133,9 +136,10 @@
             </div>
             <div class="card-5 card">
                 <div>
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                        erat, id facilisis felis accumsan nec.
+                    <h3>Easy Peasy App</h3>
+                    <p>
+                        Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur
+                        dignissim nisi in tortor commodo, ac bibendum magna tincidunt.
                     </p>
                     <div id="card-icons">
                         <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
@@ -146,9 +150,10 @@
             </div>
             <div class="card-6 card">
                 <div>
-                    <h3>Super Cool Project</h3>
-                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-                        erat, id facilisis felis accumsan nec.
+                    <h3>Money Maker</h3>
+                    <p>
+                        Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus
+                        sit amet ex. Pellentesque mollis nec sem vel aliquam.
                     </p>
                     <div id="card-icons">
                         <img src="./assets/icons/heart_plus_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Add to Favorite">
