--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
                     </div>
                 </div>
             </div>
+            <div class="announcement-card right-side-card"></div>
+            <h2 id="trending-header">Trending</h2>
+            <div class="trending-card right-side-card"></div>
         </div>
     </div>
 </body>
