--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="account-greeting">
             <img src="./assets/img/profile_pic.png" alt="Header Profile Pic">
             <div>
-                <p>Hi, there,</p>
+                <p style="color: black;">Hi, there,</p>
                 <h1>Abdirazak Farah (@butterdabread)</h1>
             </div>
         </div>
@@ -162,7 +162,26 @@
                     </div>
                 </div>
             </div>
-            <div class="announcement-card right-side-card"></div>
+            <div class="announcement-card right-side-card">
+                <div>
+                    <h4>Site Maintenance</h4>
+                    <p>
+                        Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit
+                        sodales congue...
+                    </p>
+                    <hr width="100%">
+                    <h4>Community Share Day</h4>
+                    <p>
+                        Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...
+                    </p>
+                    <hr width="100%">
+                    <h4>Updated Privacy Policy</h4>
+                    <p>
+                        Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis
+                        sem in mattis...
+                    </p>
+                </div>
+            </div>
             <h2 id="trending-header">Trending</h2>
             <div class="trending-card right-side-card"></div>
         </div>
