Completed trending tab

--- a/index.html
+++ b/index.html
@@ -183,7 +183,29 @@
                 </div>
             </div>
             <h2 id="trending-header">Trending</h2>
-            <div class="trending-card right-side-card"></div>
+            <div class="trending-card right-side-card">
+                <div>
+                    <img src="./assets/img/profile_pic.png" alt="profile pic">
+                    <div>
+                        <h4>@butterdabread</h4>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./assets/img/profile_pic3.png" alt="profile pic">
+                    <div>
+                        <h4>@kendall</h4>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div>
+                    <img src="./assets/img/profile_pic4.png" alt="profile pic">
+                    <div>
+                        <h4>@Mark</h4>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
